# nevins-port

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
apps/nevins/: main.cpp
apps/nevins-console/: main.cpp
cmake/: NevinsOptions.cmake
core/fstar/: Makefile  Nevins.CaptureManifest.fst  Nevins.Policy.fst  Nevins.ScanPlan.fst  Nevins.SignalCard.fst  Nevins.Types.fst
docs/: architecture.md  build-blockers.md  capture-format-nv1.md  fstar-core.md  legal-boundaries.md  signal-card-format.md
include/nevins/: capture.h  core_api.h  device.h  signal_card.h  version.h
scripts/: build-native.sh  verify-fstar.sh  verify-no-python.sh
src/: capture.cpp  core_bridge.cpp  device_mock.cpp  device_rtlsdr.cpp  signal_card.cpp  spectrum.cpp
tests/: test_capture.cpp  test_no_python.cpp  test_scan_plan.cpp  test_signal_card.cpp
